--- a/index.html
+++ b/index.html
@@ -1,33 +1,155 @@
 <!doctype html>
 <html>
 <head>
-<meta charset="utf-8">
-<title>无标题文档</title>
-<link href="pyx.css" rel="stylesheet" type="text/css">
+<meta charset="UTF-8">
+<title>Untitled Document</title>
+<link href="1.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-	<div class="header">Micky'beauty</div>
-	<div class="left">
-		<div class="t">Micky drunk coffee~
-		<scan>gulugulu~~~~~</scan></div>
+
+	<div class="header">
+	<li><a href="#">Subscribe</a></li>
+	<li><a href="#">About</a></li>
+	<li style="float:right"><input type="search"></li>	
+</div>
+	<div class="menu">
+<img src="image/logo.png" alt="logo"/>
+	<ul>
+	<li><a href="#">Technology</a></li>
+	<li><a href="#">Design</a></li>
+	<li><a href="#">Strategy</a></li>	
+	</ul>
+		
+	</div>
+	
+<div class="content">
+  <div class="left">
+		<div class="ad1">
+		<img src="image/111.png" alt="pic"/>
+		</div>
+		<div class="ad">
+	    <img src="image/2.png" alt="pic"/>
+		</div>
+		<div class="ad3"></div>
+	  <div class="ad4">
+	  <h1>STAY COUNECTED</h1><h2>Keep up to date with the best UX Resources</h2>
+	  <li>Twitter|Facebook|Email|RSS</li></div>
+		
+		<a href="#"><div class="box1">
+		  <h1>IN STRATEGY</h1>
+			<h2>Treating Users as Customers</h2>
+			<p>Designers need to think beyond just the user's journey to consider the experience of being a customer.</p>
+		</div></a>
+		<div class="box"><h1>IN TECHNOLOGY</h1>
+		  <h2>Mobile User Experience</h2>
+    <p>Trends on the Horizon A look at several future trends of significance for UX practitioners.</p>
 	</div>
 		
-	<div class="middle">
-		<div class="box1">
-			<div class="pic1"></div>
-			<div class="pic2"></div>
-			<div class="pic3"></div>
-			<div class="pic4"></div>
-		</div>
+		<div class="box5">&nbsp;</div>
+		<div class="box"><h1>INDESIGN</h1>
+			<h2>How To Prototype And Influenc People</h2>
+    <p>Generating support and buy-in using prototypes to sketch an idea and inspire</p>
+	</div>
+		<div class="box"><h1>IN STRATEGT</h1>
+			<h2>Ethnography in Industry: Methods overview</h2>
+    <p>Ethnographic data collection methods used to understand populations or</p>
+	</div>
+		<div class="box"><h1>IN STRATEST</h1>
+			<h2>The Evolved User Experience</h2>
+    <p>Adopting social technologies in user research to get rapid, up-to-date user information and feedback.</p>
+	</div>
+		<div class="box"><h1>IN TECHNOLOGY</h1>
+			<h2>Command Lines: Alive &amp; Kicking</h2>
+    <p>Command lines arent antithetical to usability; they have a place in modern interaction design.</p>
+	</div>
+	<div class="box"><h1>IN DESISN</h1>
+			<h2>Designing Objectively</h2>
+    <p>Designing for the objective psychological underpinnings that influence perception and UX.</p>
+	</div>
+	<div class="box6"></div>
+		<div class="box"><h1>IN DESIGN</h1>
+			<h2>So Tou Want To Be A Designer: Top 5 List</h2>
+    <p>Aza Raskin's advice on what you should do and master if you want to get into design.</p>
+	</div>
+		<div class="box"><h1>IN DESIAN</h1>
+			<h2>Plain Language Tenets in UK</h2>
+    <p>Plain language can help people find what they need, and understand what they find.</p>
+	</div>
+		<div class="box"><h1>IN DESIGN</h1>
+			<h2>Friction Can Be a Good Thing</h2>
+    <p>A discussion with Daniel Burka, UX designer turned game designer, about game dynamics in UX.</p>
+	</div>
+		<div class="box"><h1>IN STRATEGY</h1>
+			<h2>Profiling TIAA-CREF'S UX Practice</h2>
+    <p>How the financial services company is building up its UX practice and culture.</p>
+	</div>
+		<div class="box"><h1>IN DESIGN</h1>
+			<h2>Beyond the Medical Chart</h2>
+    <p>The power of visual representation of data to inform and affect health and medical science.</p>
+	</div>
+		<div class="box"><h1>IN DESIGN</h1>
+			<h2>Design For Mobile</h2>
+    <p>UX Mag Senior Editor Juan Sanchez recaps the trends and ideas he found at the Design for Mobile confer</p>
+	</div>
 		<div class="box2">
-			<div class="pic5"></div>
-			<div class="pic6"></div>
-			<div class="pic7"></div>
+		  <li class="oc"><a href ="#">Oct07 Playing the sandbox</a></li>
+		  <li class="oc1"><a href ="#">Oct07 Playing the sandbox</a></li>
+	      <li class="oc2"><a href ="#">Oct07 Playing the sandbox</a></li>
+		  <li class="oc3"><a href ="#">View all past articles</a></li>
+		 
 		</div>
+		<div class="box"><h1>IN DESIGN</h1>
+			<h2>Rethinking the Mobile Web</h2>
+	<p>A pragmatic look at creating an accessible and inclusive mobile experience.</p>
 	</div>
+		<div class="box"><h1>IN DESIGN</h1>
+			<h2>Playing Hard to Get</h2>
+	<p>Scarcity can be used as a powerful persuasive tactic to influence users behaviors and experiences.</p>
+	</div>
+		<div class="box"><h1>IN DESIGN</h1>
+			<h2>Excerpt From the New Book</h2>
+	<p>"Simple and Usable" An excerpt about the three types of user encountered in design.</p>
+	</div>
+		<div class="ad2"></div>
+		<div class="ad2r">
+		<li><h1>WHAT?</h1><h6>UX Magazine publishes high-guality, curated articles that help to both define and inform the field of user experience  (Ux). New articles are published freguently and continuously .geared toward Ux practitioners businesspeple,and neweomers of any level of experience.</h6></li>
+		</div>
+		<div class="ad2r"><li><h1>WHO?</h1><h6>UX Magazine is a collaborative publicationbyUx practitioners, business leaders,eoucators,scientists,and published authorsour contributors are among the best, mosthighly recognized professionals and thought-leaders in their respective fields.</h6></li></div>
+	</div>
+	
 	<div class="right">
-		<div class="t">Micky cute cute~~~</div>
+	<div class="ad"></div>
+	<ul><div class="ad2">
+		<li><h6>Our bitesized update</h6><h2><span>SHORT</span><span style="color:#637472">NEWS</span></h2></li>
+		<li><h1><a href="#">The Pretty Speedy Redesign</a></h1><h6>1 week ago</h6></li>
+		<li><h1><a href="#">The Pretty Speedy Redesign</a></h1><h6>1 week ago</h6></li>
+		<li><h1><a href="#">The Pretty Speedy Redesign</a></h1><h6>1 week ago</h6></li>
+	    <li><h1><a href="#">The Pretty Speedy Redesign</a></h1><h6>1 week ago</h6></li>
+		<li><h1><a href="#">The Pretty Speedy Redesign</a></h1><h6>1 week ago</h6></li>
+		<li><h1><a href="#">The Pretty Speedy Redesign</a></h1><h6>1 week ago</h6></li>
+		<li><h1><a href="#">The Pretty Speedy Redesign</a></h1><h6>1 week ago</h6></li>
+		<li><h1><a href="#">The Pretty Speedy Redesign</a></h1><h6>1 week ago</h6></li>
+		<li><h1><a href="#">The Pretty Speedy Redesign</a></h1><h6>1 week ago</h6></li>
+		<li><h1><a href="#">The Pretty Speedy Redesign</a></h1><h6>1 week ago</h6></li>
+		<li><h1><a href="#">The Pretty Speedy Redesign</a></h1><h6>1 week ago</h6></li>
+		<li><h1><a href="#">The Pretty Speedy Redesign</a></h1><h6>1 week ago</h6></li>
+		<li><h1><a href="#">The Pretty Speedy Redesign</a></h1><h6>1 week ago</h6></li>
+		<li><h1><a href="#">The Pretty Speedy Redesign</a></h1><h6>1 week ago</h6></li>
+		<li><h1><a href="#">The Pretty Speedy Redesign</a></h1><h6>1 week ago</h6></li>
+		<li><h1><a href="#">The Pretty Speedy Redesign</a></h1><h6>1 week ago</h6></li>
+		<li><h1><a href="#">The Pretty Speedy Redesign</a></h1><h6>1 week ago</h6></li>
+		<li><h1><a href="#">The Pretty Speedy Redesign</a></h1><h6>1 week ago</h6></li>
+		<li><h1><a href="#">The Pretty Speedy Redesign</a></h1><h6>1 week ago</h6></li>
+		</div></ul>
 	</div>
-</body>
+	
+	<div class="footer">
+		<hr style="color: rgba(233,133,134,1.00);margin-bottom: 5px;">
+
+		<h1>&copy;2010 UX Magazine</h1>
+		<h2>Content is licensed under Creative Commons Attribution-NonCommercial-ShareAlike.</h2>
+	</div>
+
+</div></body>
 </html>
